<resources>
    <string name="app_name">Shares</string>

    <string name="hello_world">Login!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="nav_login_name_hint">账号</string>
    <string name="nav_login_pass_hint">密码</string>
    <string name="nav_forget_pass">如果忘记密码请点击这里</string>
    <string name="ret">注册</string>
    <string name="nav_login">登录</string>
    <string name="splash_app_version">Android版 V4.3.1</string>
    <string name="login_pwd_empty">用户名和密码不能为空</string>
    <string name="login_pass_to_short">密码不少于6位或超过40位</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="login_net">网络请求超时，请稍后重试</string>
    <string name="title_activity_approve">ApproveActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="default_cover_user_name">一键微信登陆 与好友分享投资心得</string>
    <string name="personal_alert_title">提醒消息</string>
    <string name="personal_assets_manage_title">资产管理</string>
    <string name="personal_huodong_center_title">活动中心</string>
    <string name="personal_newscollect_title">资讯收藏</string>
    <string name="personal_setting_title">系统设置</string>
    <string name="market_pjhkopen_account">港股开户</string>
    <string name="marker_us_open_account">美股开户</string>
    <string name="common_desc">content destribution</string>
    <string name="settings_title_str">设置</string>
    <string name="setting_login_title">账号管理</string>
    <string name="setting_items_hq_set_str">行情設置</string>
    <string name="setting_hangqing_refresh_label">行情刷新頻率</string>
    <string name="setting_hangqing_refresh_content1">不刷新</string>
    <string name="setting_hs_k_line_fuquan_set">K線設置</string>
    <string name="setting_hangqing_showcolor_label">漲跌顯示設置</string>
    <string name="setting_hangqing_showcolor_content1">紅漲綠跌</string>
    <string name="setting_items_news_set_str">資訊設置</string>
    <string name="setting_items_system_set_str">系統設置</string>
    <string name="app_version">4.3.1</string>
    <string name="setting_version">版本</string>
    <string name="setting_feedback_string">意見反饋</string>
    <string name="setting_recommend_string">把我们的软件推荐给好友</string>
    <string name="setting_clear_cache_string">清除緩存</string>
    <string name="portfolio_refreshbtn_statistics_switch">自选列表刷新按钮显示</string>
    <string name="exit_Process">再按一次退出程序</string>
    <string name="information_collection">资讯收藏</string>
    <string name="stockEntity">股票</string>
    <string name="update">更新</string>
    <string name="setting_update_textview">软件更新</string>
    <string name="setting_disclaimer_string">免责声明</string>
    <string name="setting_text_string">瑞富股票软件许可协议</string>
    <string name="login_account">股票账号</string>
    <string name="logined_account">已登录</string>
    <string name="setting_logout_content">退出</string>
    <string name="login_account_name">账号名称（1234344353453）</string>
    <string name="market_transaction">交易</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="buy_fragment">买入</string>
    <string name="sale_fragment">卖出</string>
    <string name="buy_traded">买盘五档</string>
    <string name="sell_traded">卖盘五档</string>
    <string name="def_value">--</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->

    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="filler_text">可以试一下下拉刷新功能</string>
    <string name="market_transaction_login">交易登录界面</string>

</resources>
