<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/setting_backgroundcolor"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:background="@color/common_top_title_bg_color"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip">

        <ImageView
            android:id="@id/accmanager_close_button"
            android:contentDescription="@null"
            style="@style/setting_cancel_label_style" />

        <TextView
            android:gravity="center"
            android:id="@id/accmanager_title_setting"
            android:text="@string/setting_login_title"
            style="@style/setting_title_label_style" />
    </RelativeLayout>

    <ImageView
        android:background="@drawable/settings_items_boundary_line"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:contentDescription="@null" />

    <TextView android:textSize="16.0sp"
              style="@style/setting_text_right_style"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20.0dip"
              android:layout_marginTop="25.0dip"
              android:layout_marginBottom="10.0dip"
              android:text="@string/login_account" />

    <LinearLayout android:orientation="vertical"
                  android:paddingBottom="54.0dip"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1">

        <RelativeLayout
            android:id="@id/setting_login_account"
            android:background="@drawable/settings_shape_corner_updown_selector"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/setting_blockitem_height"
            android:layout_weight="0.44">

            <TextView
                     android:id="@id/logined_accout_id"
                     android:text="@string/logined_account"
                     style="@style/setting_text_left_style"
                     android:layout_alignBottom="@id/enter_image1"
                     android:layout_alignStart="@+id/textView"/>

            <TextView android:textSize="12.0sp"
                      style="@style/setting_text_right_style"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="20.0dip"
                      android:text="@string/login_account_name"
                      android:id="@+id/textView"
                      android:layout_below="@id/enter_image1"
                      android:layout_alignParentStart="true"/>

            <ImageView android:id="@id/enter_image1"
                       android:paddingRight="5.0dip"
                       android:src="@drawable/settings_enter"
                       android:layout_alignParentRight="true"
                       android:layout_centerVertical="true"
                       android:contentDescription="@null"
                       style="@style/settings_items_enter_arrow_style" />

            <TextView android:id="@id/logout_content"
                      android:text="@string/setting_logout_content"
                      android:layout_toLeftOf="@id/enter_image1"
                      android:textColor="@color/settings_items_title_color"
                      style="@style/setting_text_right_style" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>