<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fff5f5f5"
                android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/nav_et_login_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="6dip"
            android:hint="@string/nav_login_name_hint"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <EditText
            android:id="@+id/nav_et_login_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="6dip"
            android:hint="@string/nav_login_pass_hint"
            android:imeOptions="actionDone"
            android:password="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/nav_tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="4dip"
            android:clickable="true"
            android:text="@string/nav_forget_pass"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="130dip"
            android:layout_height="1dip"
            android:layout_marginLeft="12dip"
            android:background="@android:color/black" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/nav_bt_ret"
                android:layout_width="120dip"
                android:layout_height="40dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dip"
                android:text="@string/ret" />

            <Button
                android:id="@+id/nav_bt_confirm"
                android:layout_width="120dip"
                android:layout_height="40dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/nav_login"
                android:layout_marginRight="4dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="258dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_wechat_login"
            android:background="@drawable/umeng_socialize_wechat"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_qq_login"
            android:background="@drawable/umeng_socialize_qq_on"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="340dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_wechat_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注销（微信）" />
        <Button
            android:id="@+id/btn_qq_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注销（QQ）" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分享" />
    </LinearLayout>


</RelativeLayout>